--- a/recetas/Colombia/arroz_coco.html
+++ b/recetas/Colombia/arroz_coco.html
@@ -7,9 +7,9 @@
 </head>
 
 <body LANG="es-ES">
-	<h1><img id="imagen3" src="imagenes/arroz_coco.jpg" name="Imagen1">
+	<h1> <img src="../../imagenes/arroz_coco.jpg" alt="Arroz de coco" height="500px" width="700px">
 	</h1>
-	<h1 id="titulo3">Arroz con coco y camarón fresco (Región Caribe)</h1>
+	<h1 id="titulo3">Arroz con coco y camaron fresco (Region Caribe)</h1>
 	<br>
 	<p>El arroz con camarones es típico de la Costa Caribe y Costa Pacífica, aunque en las demás regiones ya se ha
 		vuelto un plato muy apetecido para ocasiones especiales.</p>
